noinst_LIBRARIES = libtidy.a
AM_CFLAGS = $(DEPS_CFLAGS) -Wall -I..

libtidy_a_SOURCES=tidy-viewport.c tidy-adjustment.c tidy-marshal.c tidy-scrollable.c \
		tidy-depth-group.c tidy-adjustment.h   tidy-marshal.h  tidy-scrollable.h  \
		tidy-dark-texture.c tidy-dark-texture.h \
		tidy-viewport.h tidy-depth-group.h  tidy-private.h  tidy-types.h

# End of Makefile.am
